# VoxelGame

./: CMakeLists.txt  README.md  main.cpp
Engine/AABB/: AABB.cpp  AABB.h
Engine/Camera/: Camera.cpp  Camera.h  Frustum.cpp  Frustum.h
Engine/ConfigParser/: ConfigParser.cpp  ConfigParser.h
Engine/Drawable/: Drawable2d.cpp  Drawable2d.h  Drawable3d.cpp  Drawable3d.h
Engine/FileReader/: FileReader.cpp  FileReader.h
Engine/Graphics/: GraphicsUtil.cpp  GraphicsUtil.h  Renderer.cpp  Renderer.h
Engine/Input/: PlayerInput.cpp  PlayerInput.h
Engine/Mesh/: Mesh.cpp  Mesh.h
Engine/MeshData/: Buffer.cpp  Buffer.h  MeshData.h  Meshdata_simple.cpp  Meshdata_simple.h
Engine/ModelLoader/: ModelLoader.cpp  ModelLoader.h
Engine/Noise/: NoiseGenerator.cpp  NoiseGenerator.h
Engine/ResourceManager/: ResourceManager.cpp  ResourceManager.h
Engine/Scene/: Scene.cpp  Scene.h
Engine/Shader/: FragmentShader.cpp  FragmentShader.h  Shader.cpp  Shader.h  VertexShader.cpp  VertexShader.h
Engine/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.h
Engine/Skybox/: Skybox.cpp  Skybox.h
Engine/Texture/: Texture.h  Texture2d.cpp  Texture2d.h  Texture3d.cpp  Texture3d.h
Engine/Transformable/: Transformable.cpp  Transformable.h  Transformable2d.cpp  Transformable2d.h
Engine/Vertex/: Vertex.h
Game/: Crosshair.cpp  Crosshair.h
Game/Chunk/: Chunk.cpp  Chunk.h  ChunkConstants.cpp  ChunkConstants.h  ChunkManager.cpp  ChunkManager.h  Structure_Builder.cpp  Structure_Builder.h
Game/ChunkData/: Heightmap3d.h
Game/Collider/: Collider.cpp  Collider.h
Game/Network/: Connection.cpp  Connection.h
Game/Ray/: Ray.cpp  Ray.h
Game/TextureAtlas/: TextureAtlas.cpp  TextureAtlas.h
Resources/: config.txt
Resources/Shaders/: chunk_fragment.frag  fragment_shader.frag  vertex_shader2d.vert  vertex_shader3d.vert  water_shader.vert
